[gd_scene load_steps=5 format=3 uid="uid://n0etpbccp21v"]

[ext_resource type="Script" uid="uid://coe2oqogcqnjd" path="res://inventory_slot.gd" id="1_bfyh4"]
[ext_resource type="Texture2D" uid="uid://d02j3sud1vvwv" path="res://Sprites/tile_set.png" id="2_75pi0"]
[ext_resource type="Texture2D" uid="uid://d25v22u2bendx" path="res://Sprites/item_sprites.png" id="3_rhcms"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kiat1"]
size = Vector2(80, 80)

[node name="inventory_slot" type="Node2D"]
script = ExtResource("1_bfyh4")
item = "book"

[node name="box_sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_75pi0")
hframes = 94
vframes = 94
frame = 92

[node name="item_sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_rhcms")
hframes = 63
vframes = 63
frame = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_kiat1")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
